mongodb and unit test
